# Jing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/lab2-test/conductor-beckmann/: scene.json
examples/lab2-test/conductor-ggx/: scene.json
examples/lab2-test/dielectric-beckmann/: scene.json
examples/lab2-test/dielectric-ggx/: scene.json
examples/lab2-test/oren-nayar/: scene.json
examples/lab2-test/phong/: scene.json
scripts/: rgb_blackbody.py
src/: main.cpp
src/CoreLayer/: Utils.h
src/CoreLayer/ColorSpace/: RGB.h
src/CoreLayer/Math/: Constant.h  Distribution.h  Function.h  Geometry.h  Math.h  Transform.cpp  Transform.h
src/FunctionLayer/Acceleration/: AABB.cpp  AABB.h  Acceleration.cpp  Acceleration.h  BVH.cpp  BVH.h  EmbreeBVH.cpp  EmbreeBVH.h  Linear.cpp  Linear.h  Octree.cpp  Octree.h
src/FunctionLayer/Camera/: Camera.cpp  Camera.h  Pinhole.cpp  Pinhole.h
src/FunctionLayer/Film/: Film.h
src/FunctionLayer/Integrator/: DirectIntegrator.cpp  DirectIntegrator.h  Integrator.h  NormalIntegrator.cpp  NormalIntegtator.h  PathIntegrator.cpp  PathIntegrator.h  UVIntegrator.cpp  UVIntegrator.h  VolIntegrator.cpp  VolIntegrator.h  WhittedIntegrator.cpp  WhittedIntegrator.h
src/FunctionLayer/Light/: AreaLight.cpp  AreaLight.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentLight.cpp  EnvironmentLight.h  Light.h  SpotLight.cpp  SpotLight.h
src/FunctionLayer/Material/: Conductor.cpp  Conductor.h  Dielectric.cpp  Dielectric.h  Empty.cpp  Empty.h  Material.cpp  Material.h  Matte.cpp  Matte.h  Mirror.cpp  Mirror.h  OrenNayar.cpp  OrenNayar.h  Phong.cpp  Phong.h
src/FunctionLayer/Material/BxDF/: BSDF.h  Lambert.h  OrenNayar.h  Phong.h  RoughConductor.h  RoughDielectric.h  Specular.h  Transparent.h  Warp.h
src/FunctionLayer/Material/NDF/: Beckmann.h  GGX.h  NDF.h
src/FunctionLayer/Medium/: GridDensityMedium.cpp  GridDensityMedium.h  GridMedium.cpp  GridMedium.h  HomoMedium.cpp  HomoMedium.h  Medium.h  MediumPhase.h
src/FunctionLayer/Ray/: Ray.h
src/FunctionLayer/Sampler/: IndependentSampler.cpp  IndependentSampler.h  Sampler.h
src/FunctionLayer/Scene/: Scene.cpp  Scene.h
src/FunctionLayer/Shape/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Disk.cpp  Disk.h  Intersection.h  Parallelogram.cpp  Parallelogram.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/FunctionLayer/Texture/: ConstantTexture.h  ImageTexture.cpp  ImageTexture.h  Mipmap.cpp  Mipmap.h  NormalTexture.cpp  NormalTexture.h  Texture.cpp  Texture.h
src/ResourceLayer/: Factory.h  FileUtil.h  Image.cpp  Image.h  JsonUtil.h  Mesh.cpp  Mesh.h
